# robot_arm_based_on_pegasus

./: README.md
Sim/install/: local_setup.sh  setup.sh
Sim/log/: latest_build
Sim/pegasus_arm_description/: CMakeLists.txt  package.xml
Sim/pegasus_arm_description/config/: pegasus_arm.srdf
Sim/pegasus_arm_description/install/: local_setup.sh  setup.sh
Sim/pegasus_arm_description/launch/: moveit_display.launch.py
Sim/pegasus_arm_description/log/: latest_build  latest_list
Sim/pegasus_arm_description/src/pegasus_arm_commander/: package.xml  setup.py
Sim/pegasus_arm_description/src/pegasus_arm_commander/pegasus_arm_commander/install/: local_setup.sh  setup.sh
Sim/pegasus_arm_description/src/pegasus_arm_commander/pegasus_arm_commander/log/: latest_build
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
resources/stl/: Robot Arm Assembly II - Base Assembly-1 Bearing Lock-1.STL  Robot Arm Assembly II - Base Assembly-1 Bearing Lock-2.STL  Robot Arm Assembly II - Base Assembly-1 Bearing Lock-3.STL  Robot Arm Assembly II - Base Assembly-1 Bearing-1.STL  Robot Arm Assembly II - Base Assembly-1 Bearing-2.STL  Robot Arm Assembly II - Base Assembly-1 Bearing-3.STL  Robot Arm Assembly II - Base Assembly-1 Bearing-4.STL  Robot Arm Assembly II - Base Assembly-1 Gear Attachment Base-1.STL  Robot Arm Assembly II - Base Assembly-1 INTERNAL RING A-1.STL  Robot Arm Assembly II - Base Assembly-1 Motor Bracket Base-1.STL  Robot Arm Assembly II - Base Assembly-1 SPUR GEAR 31.5DIA-1.STL  Robot Arm Assembly II - Base Assembly-1 ST3215-1 ST3215.step-1 GE_27.step-1.STL  Robot Arm Assembly II - Base Assembly-1 ST3215-1 ST3215.step-1 MOTOR-1723_3.step-1.STL  Robot Arm Assembly II - Base Assembly-1 ST3215-1 ST3215.step-1 PCB-CHAZUO_92.step-1.STL  Robot Arm Assembly II - Base Assembly-1 ST3215-1 ST3215.step-1 SG-ZIJI_15.step-1.STL  Robot Arm Assembly II - Base Assembly-1 ST3215-1 ST3215.step-1 XG-ZIJI_16.step-1.STL  Robot Arm Assembly II - Base Assembly-1 ST3215-1 ST3215.step-1 ZK_122.step-1.STL  Robot Arm Assembly II - Base Assembly-1 ST3215-1 ST3215.step-1 金属舵盘（从动）.step-1.STL  Robot Arm Assembly II - Base Assembly-1 ST3215-1 ST3215.step-1 金属舵盘（驱动）.step-1.STL  Robot Arm Assembly II - Base Assembly-1 Upper Casing 16Dia-1.STL  Robot Arm Assembly II - Gripper Assembly-1 Base to Base Link-1.STL  Robot Arm Assembly II - Gripper Assembly-1 Base to Base Link-2.STL  Robot Arm Assembly II - Gripper Assembly-1 Gripper 1-2.STL  Robot Arm Assembly II - Gripper Assembly-1 Gripper Base to 360 Motor-1.STL  Robot Arm Assembly II - Gripper Assembly-1 Servo Motor Micro  9g-1.STL  Robot Arm Assembly II - Gripper Assembly-1 gear1-1.STL  Robot Arm Assembly II - Gripper Assembly-1 gear2-1.STL  Robot Arm Assembly II - Gripper Assembly-1 grip link 1-1.STL  Robot Arm Assembly II - Gripper Assembly-1 grip link 1-2.STL  Robot Arm Assembly II - Gripper Assembly-1 grip link 1-3.STL  Robot Arm Assembly II - Gripper Assembly-1 grip link 1-4.STL  Robot Arm Assembly II - Link II Assembly-1 Link II Connector-2.STL  Robot Arm Assembly II - Link II Assembly-1 Motor Bracket Shoulder I-1.STL  Robot Arm Assembly II - Link II Assembly-1 Motor Bracket Shoulder II-1.STL  Robot Arm Assembly II - Link II Assembly-1 ST3215-1 ST3215.step-1 GE_27.step-1.STL  Robot Arm Assembly II - Link II Assembly-1 ST3215-1 ST3215.step-1 MOTOR-1723_3.step-1.STL  Robot Arm Assembly II - Link II Assembly-1 ST3215-1 ST3215.step-1 PCB-CHAZUO_92.step-1.STL  Robot Arm Assembly II - Link II Assembly-1 ST3215-1 ST3215.step-1 SG-ZIJI_15.step-1.STL  Robot Arm Assembly II - Link II Assembly-1 ST3215-1 ST3215.step-1 XG-ZIJI_16.step-1.STL  Robot Arm Assembly II - Link II Assembly-1 ST3215-1 ST3215.step-1 ZK_122.step-1.STL  (+50 more)
ros2-ws/: README.md  cm_log_full.txt  joint_states.txt  out.txt  pegasus_arm.urdf  pegasus_commander.py  tree.txt
ros2-ws/src/pegasus_arm_commander/: package.xml  setup.py
ros2-ws/src/pegasus_arm_description/: CMakeLists.txt.save  log.txt  setup.py  tree.txt
ros2-ws/src/pegasus_arm_moveit_config/: .setup_assistant
ros2-ws/src/pegasus_assistant/: .setup_assistant  package.xml
scripts/: arduino_bridge_simulator.sh  arduino_simulator.sh  compatibility.py  run_full_stack.sh  serial_bridge.sh  test_connection.sh
scripts/hardwareInterface/: hardwareInterface.ino
src/moveit_srdf/: CMakeLists.txt  package.xml
src/moveit_srdf/config/: kinematics.yaml
src/moveit_srdf/launch/: setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/pegasus_arm_commander/: setup.cfg
src/pegasus_arm_description/: CMakeLists.txt  treelog.txt
src/pegasus_arm_description/config/: ompl_planning.yaml
src/pegasus_arm_description/install/pegasus_arm_description/share/pegasus_arm_description/: local_setup.dsv  package.bash  package.dsv  package.sh  package.xml
src/pegasus_arm_description/install/pegasus_arm_description/share/pegasus_arm_description/URDF/: my_robot.urdf  pegasus_arm_new.urdf.xacro
src/pegasus_arm_description/install/pegasus_arm_description/share/pegasus_arm_description/config/: controllers.yaml  ros2_controllers.yaml
src/pegasus_arm_description/install/pegasus_arm_description/share/pegasus_arm_description/launch/: moveit_display.launch.py
src/pegasus_arm_description/install/pegasus_arm_description/share/pegasus_arm_description/urdf/: pegasus_arm.urdf.xacro
src/pegasus_arm_description/launch/: move_group.launch.py  moveit_display.launch.py  static_virtual_joint_tfs.launch.py
src/pegasus_arm_description/log/: latest_list
src/pegasus_arm_moveit/: CMakeLists.txt  package.xml
src/pegasus_arm_moveit/config/: moveit_controllers.yaml  ompl_planning.yaml
src/pegasus_arm_moveit/install/: local_setup.sh  setup.sh
src/pegasus_arm_moveit/launch/: package.xml
src/pegasus_arm_moveit/log/: latest_build
src/pegasus_arm_moveit/moveit_srdf/: .setup_assistant
src/pegasus_arm_moveit/moveit_srdf/config/: pegasus_arm.srdf
src/pegasus_arm_moveit/moveit_srdf/launch/: move_group.launch.py
src/pegasus_arm_moveit_config/: CMakeLists.txt  package.xml
src/pegasus_assistant/: CMakeLists.txt
(+163 files in other folders)
