<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pegasus_arm_commander</name>
  <version>0.0.0</version>
  <description>GUI-based commander for controlling the Pegasus Arm using MoveIt and ROS 2.</description>
  <maintainer email="mmms@todo.todo">mmms</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tkinter</depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

