<?xml version="1.0"?>
<package format="3">
  <name>pegasus_arm_description</name>
  <version>0.0.0</version>
  <description>Robot description and MoveIt configuration for Pegasus Arm</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>controller_manager</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
